--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.4",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-flipper": "^0.145.0",
