--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.4",
-    "lodash": "^4.17.21",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-flipper": "^0.145.0",
     "react-native-safe-area-context": "^4.2.5",
+    "react-native-screens": "^3.13.1",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
     "redux-flipper": "^2.0.1",
